--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -46,13 +46,13 @@ margin-right: 1rem;
     align-items: center;
 }
 
-ul, .Ul-Navbar, .registerStyle {
+.Ul-Navbar, .registerStyle {
     border-radius: 6mm;
     background: none;
     border: 1px solid #eee;
     box-shadow: 0 0 2px black;
   }
-  li, .Li-Navbar {
+  .Li-Navbar {
     float: left;
     list-style-type: none;
     /* padding: 1px; */
@@ -63,9 +63,7 @@ ul, .Ul-Navbar, .registerStyle {
     width: 100px;
     text-align: center;
   }
-  p, .P-Navbar {
-    transform: skew(-160deg);
-  }
+
   li:hover, .Li-Navbar:hover {
     background: #eee;
     border-radius: 6mm;
