fix some styles and create layout of register

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -70,6 +70,8 @@
 }
 .subtittleLinkedin{
     padding: 3px;
+    font-size: 1.2rem;
+    margin-top: 5px;
 }
 .linkLinkedin{
     padding: 5px;
@@ -88,4 +90,5 @@
 }
 .copyrigth{
     font-size: x-small;
+    padding-top: 15px;
 }
