--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -7,7 +7,10 @@
     width: 80%;
 }
 .textContact{
-    padding: 3rem;
+    padding-top: 3rem;
+    padding-left: 3rem;
+    padding-bottom: 0;
+    padding-right: 3rem;
     text-align: center;
     width: 80%;
 }
@@ -43,7 +46,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 .buttonContactForm{
     padding: 0.5rem;
