--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -47,6 +47,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 2rem;
+    margin-top: 1.5rem;
 }
 .buttonContactForm{
     padding: 0.5rem;
