--- a/src/components/Navbar/Search/Search.css
+++ b/src/components/Navbar/Search/Search.css
@@ -8,6 +8,7 @@
     outline: none;
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
     box-shadow: 0px 0px 20px -18px;
+    margin-bottom: 2rem;
   }
   
   .input:hover {
