--- a/src/components/Locals/Locals.css
+++ b/src/components/Locals/Locals.css
@@ -18,10 +18,11 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin: 5px;
+    width: 100%;
 }
 .img-locals{
     width: 100%;
-    height: 300px;
+    height: 360px;
     box-shadow: 5px 5px 5px 5px #c1b8ae;
     border-radius: 10px;
 }
@@ -31,6 +32,7 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 1rem;
+    width: 40%;
 }
 .Name-Local{
     font-size: 30px;
