--- a/src/components/Navbar/UserLogi/UserLogin.css
+++ b/src/components/Navbar/UserLogi/UserLogin.css
@@ -2,3 +2,12 @@
     width: 50px;
     height: 50px;
 }
+
+@media screen and (max-width: 735px) {
+    .userLoginNav{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 99%;
+    }
+  }
