--- a/src/components/faqs/Faqs.css
+++ b/src/components/faqs/Faqs.css
@@ -6,12 +6,12 @@
     width: 100%;
     height: 100%;
     background-color: #f5f5f5;
-    padding: 0 20px;
 }
 .text-and-img-faqs{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    padding: 20px
 }
 
 .Titles-color-faqs{
