--- a/src/components/AllProducts/allProducts.css
+++ b/src/components/AllProducts/allProducts.css
@@ -5,7 +5,10 @@
 }
 
 .cards-all-products {
-    width: 70%;
+    width: 75%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.8rem;
 }
 
 @media screen and (max-width:949px) {
