--- a/src/components/CardChangeColor/cardChangeColor.css
+++ b/src/components/CardChangeColor/cardChangeColor.css
@@ -1,7 +1,7 @@
 .card-change-color{
     position: relative;
     width: 320px;
-    height: 600px;
+    height: 480px;
     background: #fff;
     overflow: hidden;
     box-shadow: 0 5px 15px rgba(50, 50, 50, 0.438);
@@ -11,7 +11,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
+    top: 40%;
     left: 0;
     clip-path: circle(150px at 80% 20%);
     z-index: -2;
@@ -27,11 +27,12 @@
 
 .gradient[color='brown']{
     background: rgb(101,76,59);
-    z-index: 1;
+    
 }
 
 .gradient[color='claro']{
     background: #c1b8ae;
+    z-index: 1;
 }
 
 .bg-watch{
@@ -55,7 +56,7 @@
     width: 40px;
     height: 40px;
     top: 15px;
-    right: 15px;
+    left: 15px;
     background: #fff;
     color: #31394e;
     border-radius: 50%;
@@ -76,9 +77,9 @@
     position: absolute;
     width: 250px;
     left: 100px;
-    bottom: 0;
     opacity: 0;
     z-index: 2;
+    border-radius: 10% 0% 50% 70%;
 }
 
 .watch-img.show{
@@ -94,10 +95,9 @@
     padding: 0 0 10px 0;
 }
 
- .title{
-    margin-bottom: 10px;
-    font-size: 2rem;
-    line-height: 1.3;
+.title{
+    margin-bottom: 6px;
+    font-size: 1.8rem;
     color: #303030;
 }
 
@@ -110,42 +110,21 @@
 }
 
 .h3-color{
-    font-size: 1.3;
+    font-size: 1.5;
     font-weight: 600;
     text-transform: uppercase;
     color: #333;
 }
 
-.color{
-    width: 25px;
-    height: 25px;
-    margin: 0 10px;
-    border: 3px solid;
-    cursor: pointer;
-}
-
-.colors{
+.color-container{
     display: flex;
-    align-items: center;
-    padding: 8px 0;
+    justify-content: space-between;
 }
 
-.color[color='blue']{
-    background-color: #31394e;
-}
-
-.color[color='pink']{
-    background-color: pink;
-}
-
-.color[color='brown']{
-    background-color: rgb(101,76,59);
-}
-
-.color[color='claro']{
-    background-color: #c1b8ae;
-}
-
-.active{
-    border-color: rgb(160, 136, 0);
+.more-and-buy{
+    padding: 3px 10px;
+    background: #31394e;
+    color: #fff;
+    border-radius: 6mm;
+    cursor: pointer;
 }
