--- a/src/components/CardChangeColor/cardChangeColor.css
+++ b/src/components/CardChangeColor/cardChangeColor.css
@@ -88,7 +88,7 @@
 
 .info{
     position: relative;
-    padding: 35px 40px;
+    padding: 15px 20px;
 }
 
 .watch-name{
@@ -122,9 +122,14 @@
 }
 
 .more-and-buy{
-    padding: 3px 10px;
+    padding: 12px 20px;
     background: #31394e;
     color: #fff;
     border-radius: 6mm;
     cursor: pointer;
+}
+
+.icon-cart{
+    display: flex;
+    align-items: center;
 }
