--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -18,6 +18,8 @@
     height: 250px;
     margin-top: 2px;
     border-radius: 9px;
+    object-fit: cover;
+    object-position:top;
 }
 
 .containerProfile {
@@ -77,4 +79,19 @@
     font-weight: 700;
     margin-bottom: 5px;
 
+}
+.photo-user{
+    object-fit: cover;
+}
+.labelProfile{
+    font-size: 13px;
+    width: 75%;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.buttonRegister{
+margin-top: 25px;
 }
