--- a/src/layouts/HomePage/homePage.css
+++ b/src/layouts/HomePage/homePage.css
@@ -1,4 +1,26 @@
 .container-homepage{
     width: 100%;
-    height: 90vh;
+    height: 70vh;
+    margin: 2rem;
+}
+@media screen and (max-width: 1875px){
+    .container-homepage{
+        width: 90%;
+        height: 90vh;
+        margin: 2rem;
+    }
+}
+@media screen and (max-width: 780px){
+    .container-homepage{
+        width: 90%;
+        height: 170vh;
+        margin: 2rem;
+    }
+}
+@media screen and (max-width: 570px){
+    .container-homepage{
+        width: 90%;
+        height: 160vh;
+        margin: 2rem;
+    }
 }
