--- a/src/components/Editproduct/EditProductForm.css
+++ b/src/components/Editproduct/EditProductForm.css
@@ -17,9 +17,9 @@
 }
 .containerForm{
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   margin-bottom: 3rem;
   margin-top: 1.5rem;
 }
