--- a/src/components/AllProducts/allProducts.css
+++ b/src/components/AllProducts/allProducts.css
@@ -8,7 +8,8 @@
     width: 75%;
     display: flex;
     flex-wrap: wrap;
-    gap: 1.8rem;
+    gap: 2rem;
+    margin-bottom: 3rem;
 }
 @media screen and (max-width:1356px){
     .cards-all-products{
