--- a/src/components/CardChangeColor/cardChangeColor.css
+++ b/src/components/CardChangeColor/cardChangeColor.css
@@ -88,7 +88,7 @@
 
 .info {
     position: relative;
-    padding: 15px 20px;
+    padding: 1px 20px;
     z-index: 3;
 }
 
@@ -98,7 +98,7 @@
 
 .title-name {
     margin-bottom: 6px;
-    font-size: 1.8rem;
+    font-size: 23px;
     color: #303030;
 }
 
@@ -111,7 +111,7 @@
 }
 
 .h3-color {
-    font-size: 1.5;
+    /* font-size: 1.5; */
     font-weight: 600;
     text-transform: uppercase;
     color: #333;
@@ -123,7 +123,7 @@
 }
 
 .more-and-buy {
-    padding: 12px 20px;
+    padding: 10px 10px;
     background: #31394e;
     color: #fff;
     border-radius: 6mm;
