--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,8 +13,8 @@
 .UserContainer{
   display: flex;
   justify-content: space-between;
-  margin: 1px;
   flex-wrap: wrap;
+  padding-right: 5rem;
 }
 
 .registerStyle{
@@ -73,4 +73,9 @@ margin-right: 1rem;
   a {
     color: black;
     text-decoration: none;
+}
+
+.list-style-none {
+  color: black;
+  text-decoration: none;
 }
