--- a/src/components/CardChangeColor/cardChangeColor.css
+++ b/src/components/CardChangeColor/cardChangeColor.css
@@ -135,6 +135,18 @@
     align-items: center;
 }
 
+.cont-reactions {
+    display: flex;
+    align-items: center;
+    height: 2em;
+}
+
+.cont-reactions img:hover {
+    cursor: pointer;
+    transform: scale(0.9);
+    transition: 0.5s;
+}
+
 @media screen and (max-width:1197px) {
     .card-change-color {
         width: 300px;
