--- a/src/components/Navbar/UserLogi/UserLogin.css
+++ b/src/components/Navbar/UserLogi/UserLogin.css
@@ -63,3 +63,15 @@
   border: solid 1px black;
   
 } */
+.containerUserLogin{
+margin-top: 2rem;
+}
+@media screen and (max-width: 585px){
+  .containerUserLogin{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    padding-left: 4rem;
+  }
+}
