--- a/src/components/CardChangeColor/CardEdit.css
+++ b/src/components/CardChangeColor/CardEdit.css
@@ -1,38 +1,9 @@
-.card-change-color {
+.card-change-color-edit {
     /* position: relative; */
     width: 320px;
-    height: 520px;
     background: #fff;
     overflow: hidden;
     box-shadow: 0 5px 15px rgba(50, 50, 50, 0.438);
-}
-
-.gradient {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 40%;
-    left: 0;
-    clip-path: circle(150px at 80% 20%);
-    z-index: -2;
-}
-
-.gradient[color='blue'] {
-    background: #31394e;
-}
-
-.gradient[color='pink'] {
-    background: pink;
-}
-
-.gradient[color='brown'] {
-    background: rgb(101, 76, 59);
-
-}
-
-.gradient[color='claro'] {
-    background: #c1b8ae;
-    z-index: 1;
 }
 
 .bg-watch {
@@ -141,22 +112,13 @@
         height: 480px;
     }
 }
-
-@media screen and (max-width:526px) {
-    .card-change-color {
-        width: 100%;
+@media screen and (max-width:750px) {
+    .card-change-color-edit  {
+        width: 50%;
     }
-
-    .watch-img {
-        max-width: 100%;
-        position: absolute;
-        width: 320px;
-        left: 100px;
-        border-radius: 10% 0% 50% 70%;
+  }
+  @media screen and (max-width:550px) {
+    .card-change-color-edit  {
+        width: 70%;
     }
-
-    .gradient {
-        clip-path: circle(150px at 80% 30%);
-        top: 0;
-    }
-}
+  }
