--- a/src/components/CardChangeColor/cardChangeColor.css
+++ b/src/components/CardChangeColor/cardChangeColor.css
@@ -6,35 +6,11 @@
     overflow: hidden;
     box-shadow: 0 5px 15px rgba(50, 50, 50, 0.438);
 }
-
-.gradient {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 40%;
-    left: 0;
-    clip-path: circle(150px at 80% 20%);
-    z-index: -2;
+.card-change-color:hover{
+    cursor: pointer;
+    transform: scale(0.9);
+    transition: 0.5s;
 }
-
-.gradient[color='blue'] {
-    background: #31394e;
-}
-
-.gradient[color='pink'] {
-    background: pink;
-}
-
-.gradient[color='brown'] {
-    background: rgb(101, 76, 59);
-
-}
-
-.gradient[color='claro'] {
-    background: #c1b8ae;
-    z-index: 1;
-}
-
 .bg-watch {
     position: relative;
     height: 320px;
@@ -42,12 +18,12 @@
 
 .watch {
     position: absolute;
-    top: 200px;
-    left: -80px;
-    font-size: 8rem;
+    top: 299px;
+    left: -45px;
+    font-size: 6rem;
     opacity: 0.5;
-    color: #303030;
-    transform: rotate(-70deg);
+    color: #dcbadb;
+    transform: rotate(-63deg);
 }
 
 .share {
@@ -86,6 +62,8 @@
     opacity: 1;
     height: 90%;
     width: 90%;
+    position: absolute;
+    bottom: 2rem;
 }
 
 .info {
@@ -141,9 +119,11 @@
     display: flex;
     align-items: center;
     height: 2em;
+    padding-left: 2rem;
+    padding-top: 2rem;
 }
 
-.cont-reactions img:hover {
+.cont-reactions :hover {
     cursor: pointer;
     transform: scale(0.9);
     transition: 0.5s;
@@ -153,25 +133,6 @@
     .card-change-color {
         width: 300px;
         height: 480px;
-    }
-}
-
-@media screen and (max-width:526px) {
-    .card-change-color {
-        width: 100%;
-    }
-
-    .watch-img {
-        max-width: 100%;
-        position: absolute;
-        width: 320px;
-        left: 100px;
-        border-radius: 10% 0% 50% 70%;
-    }
-
-    .gradient {
-        clip-path: circle(150px at 80% 30%);
-        top: 0;
     }
 }
 
