--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -20,6 +20,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding-top: 0.8rem;
     padding-bottom: 1rem;
     border-radius: 10px;
     width: 40%;
@@ -60,3 +61,8 @@
 .buttonContactForm:hover{
     background-color:  #c3acbe;
 }
+@media screen and (max-width: 800px) {
+    .formContact {
+      width: 70%;
+    }
+  }
