--- a/src/components/Login/LoginForm.css
+++ b/src/components/Login/LoginForm.css
@@ -14,6 +14,7 @@
     border-radius: 10px;
     width: 40%;
     box-shadow: 5px 5px 5px 5px #c1b8ae; 
+    padding-top: 1rem;
 }
 .labelLogin{
     display: flex;
@@ -45,6 +46,7 @@
     font-size: medium;
     color: #f9f9f9;
     border: none;
+    margin-bottom: 0.5rem;
 }
 .buttonContactForm:hover{
     background-color:  #c3acbe;
@@ -55,9 +57,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
 }
 .loginBanner{
     width: 100%;
+    margin-bottom: 2rem;
 }
