--- a/src/components/Payments/style.css
+++ b/src/components/Payments/style.css
@@ -105,6 +105,10 @@ main .checkout-details .checkout-details-inner .checkout-lists .card {
   display: flex;
   -moz-column-gap: 15px;
        column-gap: 15px;
+       display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 1rem;
 }
 main .checkout-details .checkout-details-inner .checkout-lists .card .card-image {
   width: 35%;
