--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -15,7 +15,7 @@
     padding: 1rem;
 
 }
-.containerForm{
+.containerFormRegister{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,7 +45,7 @@
     margin-top: 4px;
     margin-bottom: 7px;
 }
-.buttonRegister{
+.buttonRegisterForm{
     padding: 0.5rem;
     border-radius: 9px;
     background-color:  #5c195d;
@@ -59,4 +59,11 @@
 }
 .buttonRegister:hover{
     background-color:  #c3acbe;
+}
+.registerBanner{
+    width: 100%;
+}
+.tittleRegisterForm{
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
 }
