--- a/src/components/Payments/style.css
+++ b/src/components/Payments/style.css
@@ -93,6 +93,8 @@ main .checkout-details .checkout-details-inner {
   background: #F2F2F2;
   border-radius: 10px;
   padding: 20px;
+  overflow-y: scroll;
+  height: 475px;
 }
 main .checkout-details .checkout-details-inner .checkout-lists {
   display: flex;
