--- a/src/components/Details/details.css
+++ b/src/components/Details/details.css
@@ -1,6 +1,7 @@
 .contain-details{
-    width: 100%;
-    height: 50vh;
+    min-width: 100%;
+    min-height: 50vh;
+    padding: 30px;
 }
 .nametitle-andsvg{
     width: 100%;
@@ -22,7 +23,8 @@
 }
 
 .foto-detail{
-    width: 400px;
+    height: 350px;
+    object-fit: cover;
     margin-right: 5%;
 }
 
