--- a/src/components/Navbar/UserLogi/UserLogin.css
+++ b/src/components/Navbar/UserLogi/UserLogin.css
@@ -1,8 +1,8 @@
 .logoCart{
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  margin-top: 1.4rem;
+  width: 50px;
+    height: 50px;
+    margin-top: 1.7rem;
+    margin-right: 0.7rem;
 }
 .containerLoginCartandUser{
   display: flex;
