--- a/src/components/Payments/Payments.css
+++ b/src/components/Payments/Payments.css
@@ -6,16 +6,23 @@
 .buttonDeletePayments{
     padding: 0.2rem;
     border-radius: 6mm;
-    margin-top: 0.5rem;
-    background-color: #c1b8ae;
+    background: none;
     border: none;
-    width: 80%;
+    color: #4E5150;
+    position: absolute;
+    bottom: 83%;
+    left: 93%;
+    font-size: 23px;
+}
+.imgDeletePayments{
+    width: 15px;
+    height: 15px;
 }
 @media screen and (max-width: 1875px){
     .body-payments {
         font-family: "Poppins", sans-serif;
-        height: 137vh;
-        width: 70%;
+        height: 120vh;
+        width: 90%;
         margin: 0px auto;
         padding: 50px 0px 0px;
         color: #4E5150;
@@ -24,8 +31,8 @@
 @media screen and (max-width: 768px){
     .body-payments {
         font-family: "Poppins", sans-serif;
-        height: 293vh;
-        width: 70%;
+        height: 220vh;
+        width: 90%;
         margin: 0px auto;
         padding: 50px 0px 0px;
         color: #4E5150;
@@ -34,7 +41,7 @@
 @media screen and (max-width: 570px){
     .body-payments {
         font-family: "Poppins", sans-serif;
-        width: 70%;
+        width: 90%;
         margin: 0px auto;
         padding: 50px 0px 0px;
         color: #4E5150;
