button see  all

--- a/src/components/ButtonSeeAll/buttonSeeAll.css
+++ b/src/components/ButtonSeeAll/buttonSeeAll.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 45px;
 }
 .button-see-all{
     background-color: #c1b8ae;
