--- a/src/components/Footer4Header/footer4Header.css
+++ b/src/components/Footer4Header/footer4Header.css
@@ -7,7 +7,7 @@
 }
 
 .button-catalogue{
-    padding: 20px;
+    padding: 0px 20px;
     border: 1.5px solid white;
     border-radius: 6mm;
     box-shadow: #303030;
@@ -16,13 +16,14 @@
     color: white;
     cursor: pointer;
     font-weight: 600;
+    display: flex;
+    align-items: center;
 }
 
 .column{
     display: flex;
     flex-direction: column;
     margin-right: 40px;
-    text-transform: uppercase;
 }
 
 .column > h2{
@@ -35,6 +36,14 @@
     font-size: 16px;
     color: white;
     text-shadow: 2px 2px 6px #000000;
+}
+@media screen and (max-width:931px){
+    .button-catalogue{
+        margin-left: 0px;
+    }
+    .column{
+        margin-right: 0px;
+    }
 }
 
 @media screen and (max-width:760px){
@@ -53,13 +62,23 @@
     .footer-banner{
         margin-top: -50px;    
     }
-    .button-catalogue{
-        margin-left: 10px;
-    }
     .column{
-        margin-right: 10px;
+       display: none;
     }
 }
+
+@media screen and (max-width:659px){
+    .footer-banner{
+        margin-top: -120px;
+    }
+}
+
+@media screen and (max-width:585px){
+    .footer-banner{
+        margin-top: -210px;
+    }
+}
+
 
 @media screen and (max-width:586px) {
     .column h2{
@@ -70,11 +89,5 @@
     }
     .button-catalogue{
         padding: 6px;
-    }
-}
-
-@media screen and (max-width:514px){
-    .footer-banner{
-        display: none;
     }
 }
