--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    margin-top: 30px;   
+    margin-top: 90px;   
 }
 
 .service{
@@ -49,6 +49,11 @@
         font-size: 14px;
     }
 }
+@media screen and (max-width:684px){
+    .container-services{
+        margin-top: 50px;   
+    }
+}
 
 @media screen and (max-width:680px){
     .service{
@@ -64,6 +69,8 @@
         font-size: 14px;
     }
 }
+
+
 
 @media screen and (max-width:576px){
     .service{
