--- a/src/layouts/HomePage/homePage.css
+++ b/src/layouts/HomePage/homePage.css
@@ -4,4 +4,18 @@
     justify-content: center;
     flex-direction: column;
     padding: 2rem;
+    margin-top: 300px;
+}
+
+.test{
+    background-image: linear-gradient(rgba(250, 250, 252, 0.5), rgba(8, 8, 8, 0.5)),
+                  url('../../image/backgroundHome.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; ;
+    position: absolute;
+    width: 100%;
+    height: 600px;
+    top: 0;
+    z-index: -1;
 }
