fix some styles and new components

--- a/src/components/AllProducts/allProducts.css
+++ b/src/components/AllProducts/allProducts.css
@@ -12,3 +12,9 @@
     margin-bottom: 3rem;
     justify-content: center;
 }
+.buttonNewProduct{
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: end;
+    margin-right: 5rem;
+}
