--- a/src/components/Navbar/Logo/Logo.css
+++ b/src/components/Navbar/Logo/Logo.css
@@ -1,5 +1,9 @@
 .LogoSize{
     max-width: 100%;
-    height: 200px;
-    width: 470px;
+    height: 170px;
+    width: 190px;
+}
+.containerLogo{
+    padding-left: 3rem;
+    padding-top: 0.5rem;
 }
