--- a/src/components/Navbar/UserLogi/UserLogin.css
+++ b/src/components/Navbar/UserLogi/UserLogin.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  margin-top: 1.5rem;
 }
 
 @media screen and (max-width: 662px) {
@@ -25,7 +26,7 @@
     color: #000000b3;
   }
   .linkNav:hover{
-    color: rgb(101,76,59);
+    color: #15297c;
   }
   
   .flex{
