--- a/src/components/Payments/style.css
+++ b/src/components/Payments/style.css
@@ -122,18 +122,20 @@ main .checkout-details .checkout-details-inner .checkout-lists .card .card-image
 }
 main .checkout-details .checkout-details-inner .checkout-lists .card .card-image img {
   width: 100%;
-  -o-object-fit: fill;
-     object-fit: fill;
+  height: 210px;
+  object-fit: cover;
   border-radius: 10px;
 }
 main .checkout-details .checkout-details-inner .checkout-lists .card .card-details {
   display: flex;
   flex-direction: column;
-  align-items: center
+  align-items: center;
+  width: 33%;
 }
 main .checkout-details .checkout-details-inner .checkout-lists .card .card-details .card-name {
   font-size: 19px;
   font-weight: 500;
+  text-align: center;
 }
 main .checkout-details .checkout-details-inner .checkout-lists .card .card-details .card-price {
   font-size: 16px;
