--- a/src/components/RowProducts/rowProducts.css
+++ b/src/components/RowProducts/rowProducts.css
@@ -10,6 +10,9 @@
     text-decoration: none;
     color: white;
 }
+.rowprod-list-style-none:hover{
+    color: white;
+}
 .container-item{
     color: white;
     font-size: 34px;
