--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -52,11 +52,14 @@
   font-family: auto;
   font-size: 14px;
 }
+.linksFooter{
+  text-decoration: none;
+  color: black;
+}
 .links:hover {
   color: white;
 }
 .subttitleNavigation {
-  padding-top: 7px;
   font-family: auto;
   font-size: 14px;
 }
@@ -94,6 +97,7 @@
   justify-content: center;
   justify-content: space-evenly;
   align-items: center;
+  background-color: #c1b8ae;
 }
 .copyrigth {
   font-size: 9px;
