--- a/src/components/foro/forum.css
+++ b/src/components/foro/forum.css
@@ -10,7 +10,7 @@
   justify-content: center;
   width: 30%;
   min-height: 30vh;
-  box-shadow: 5px 5px 5px 5px #c1b8ae;
+  box-shadow: 0 5px 15px rgba(50, 50, 50, 0.438);
   border-radius: 10px;
   margin: 1rem;
   margin-top: 2rem;
@@ -92,7 +92,7 @@
   padding-right: 1rem;
   padding-bottom: 1rem;
   padding-top: 1rem;
-  box-shadow: 5px 5px 5px 5px #c1b8ae;
+  box-shadow: 0 5px 15px rgba(50, 50, 50, 0.438);
   margin-top: 1.5rem;
 }
 .labelCommentForum {
