--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -10,6 +10,7 @@
     padding-top: 3rem;
     padding-left: 3rem;
     padding-bottom: 0;
+    margin-bottom: 0;
     padding-right: 3rem;
     text-align: center;
     width: 80%;
