--- a/src/components/CardChangeColor/cardChangeColor.css
+++ b/src/components/CardChangeColor/cardChangeColor.css
@@ -100,7 +100,7 @@
 
 .color-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around
 }
 
 .more-and-buy {
