--- a/src/components/Footer4Header/footer4Header.css
+++ b/src/components/Footer4Header/footer4Header.css
@@ -5,7 +5,13 @@
     z-index: 2;
     margin-top: -100px;
 }
-
+.linkCatalogue{
+    text-decoration: none;
+}
+.linkCatalogue:hover{
+    text-decoration: none;
+    color: white;
+}
 .button-catalogue{
     padding: 0px 20px;
     border: 1.5px solid white;
@@ -15,9 +21,10 @@
     background-color: #0c0c0c48;
     color: white;
     cursor: pointer;
-    font-weight: 600;
     display: flex;
     align-items: center;
+    height: 4rem;
+    padding-top: .8rem;
 }
 
 .column{
