--- a/src/components/foro/forum.css
+++ b/src/components/foro/forum.css
@@ -36,7 +36,7 @@
 .imgAvatar {
   width: 50px;
   height: 50px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 50%;
 }
 .userForum {
