fix styles and new components

--- a/src/components/foro/forum.css
+++ b/src/components/foro/forum.css
@@ -38,7 +38,7 @@
   height: 50px;
   object-fit: contain;
   border-radius: 50%;
-  background-color: black;
+  background-color: white;
 }
 .userForum {
   display: flex;
