--- a/src/components/foro/forum.css
+++ b/src/components/foro/forum.css
@@ -110,6 +110,19 @@
 }
 
 .ButtonCommentForm {
+  height: 2rem;
+  border-radius: 9px;
+  background-color: #5c195d;
+  font-size: small;
+  color: #f9f9f9;
+  border: none;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ButtonSendCommentForm{
   width: 100%;
   height: 2rem;
   border-radius: 9px;
@@ -119,6 +132,9 @@
   border: none;
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+.ButtonSendCommentForm:hover{
+  background-color: #a770b2;
 }
 .ButtonCommentForm:hover {
   background-color: #a770b2;
