--- a/src/components/Navbar/UserLogi/UserLogin.css
+++ b/src/components/Navbar/UserLogi/UserLogin.css
@@ -76,3 +76,21 @@
 .containerUserLogin{
 margin-top: 2rem;
 }
+
+.userlogin-position{
+  background-color: rgba(255, 255, 255, 0);
+  position: absolute;
+}
+
+.userlogin-position > a > h3{
+  padding: 2px 10px !important;
+}
+
+@media screen and (max-width:931px) {
+  .userlogin-position{
+    position: relative;
+  }
+  .userlogin-position > a > h3{
+    padding: 0px !important;
+  }
+}
