--- a/src/components/Navbar/UserLogi/UserLogin.css
+++ b/src/components/Navbar/UserLogi/UserLogin.css
@@ -80,6 +80,7 @@ margin-top: 2rem;
 .userlogin-position{
   background-color: rgba(255, 255, 255, 0);
   position: absolute;
+  right: -2.3rem;
 }
 
 .userlogin-position > a > h3{
