--- a/src/components/Details/details.css
+++ b/src/components/Details/details.css
@@ -1,29 +1,20 @@
 .contain-details{
-    min-width: 100%;
+    width: 70%;
     min-height: 50vh;
     padding: 30px;
-}
-.nametitle-andsvg{
-    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    box-shadow: 0 5px 15px rgba(50, 50, 50, 0.438);
+    justify-content: space-around;
 }
-
-.svgs{
-    margin-right: 120px;
-}
-
-.contain-info-item{
+.detailLayout{
     display: flex;
-    justify-content: space-evenly;
+    align-content: center;
     align-items: center;
-    width: 100%;
-    gap: 1.5rem;
-    flex-wrap: wrap;
-    margin-bottom: 1rem;
+    justify-content: center;
+    margin-bottom: 3rem;
 }
-
 .foto-detail{
     height: 350px;
     object-fit: cover;
