fix some styles

--- a/src/components/CardChangeColor/CardEdit.css
+++ b/src/components/CardChangeColor/CardEdit.css
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 2.5rem;
+    min-height: 50vh;
 }
 .tittleMyFavs{
     text-align: center;
