--- a/src/components/Payments/style.css
+++ b/src/components/Payments/style.css
@@ -89,13 +89,14 @@ main .checkout-form form .form-control-btn button {
 }
 main .checkout-details {
   width: 60%;
+  padding-top: 0.7rem;
 }
 main .checkout-details .checkout-details-inner {
   background: #F2F2F2;
   border-radius: 10px;
   padding: 20px;
   overflow-y: scroll;
-  height: 402px;
+  height: 527px;
 }
 main .checkout-details .checkout-details-inner .checkout-lists {
   display: flex;
