--- a/src/layouts/HomePage/homePage.css
+++ b/src/layouts/HomePage/homePage.css
@@ -19,8 +19,14 @@
     top: 0;
     z-index: -1;
 }
-.container-home-main{
+.container-home-main {
+    display: flex;
     margin-top: 5rem;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
 }
 @media screen and (max-width:1001px) {
     .container-home-main{
