--- a/src/components/AllProducts/allProducts.css
+++ b/src/components/AllProducts/allProducts.css
@@ -11,6 +11,7 @@
     gap: 2rem;
     margin-bottom: 3rem;
     justify-content: center;
+    min-height: 70vh;
 }
 .buttonNewProduct{
     margin-bottom: 2rem;
