see all products css

--- a/src/components/ButtonSeeAll/buttonSeeAll.css
+++ b/src/components/ButtonSeeAll/buttonSeeAll.css
@@ -1,11 +1,12 @@
-.div-see-all{
+.div-see-all {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 45px;
 }
-.button-see-all{
+
+.button-see-all {
     background-color: #c1b8ae;
     width: 280px;
     text-align: center;
@@ -17,18 +18,20 @@
     font-size: 24px;
     cursor: pointer;
 }
-.button-see-all:hover{
-    background-color:rgb(101,76,59);
+
+.button-see-all:hover {
+    background-color: rgb(101, 76, 59);
     color: #ebe9e7;
 }
 
 
-@media screen and (max-width:468px){
-    .button-see-all{
+@media screen and (max-width:468px) {
+    .button-see-all {
         width: 240px;
         font-size: 20px;
     }
 }
+
 .list-style-none {
     color: black;
     text-decoration: none;
